--- a/collection-vue/package.json
+++ b/collection-vue/package.json
@@ -15,11 +15,15 @@
   "dependencies": {
     "@vueuse/core": "^10.10.1",
     "axios": "^1.7.2",
+    "cropperjs": "^1.5.12",
+    "dayjs": "^1.11.11",
     "element-plus": "^2.7.4",
+    "gsap": "^3.12.5",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "ramda": "^0.30.1",
+    "vee-validate": "^4.13.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
   },
